# katy

./: .cvsignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.cvs  Makefile.in  README  TODO  VERSION  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  configure.in.in  katy.lsm  katy.spec  subdirs
admin/: cvs.sh
katy/: .cvsignore  Makefile.am  Makefile.in  katy.cpp  katy.desktop  katy.h  katy_client.cpp  katyapp.cpp  katyapp.h  katyfind.cpp  katyfind.h  katyfind.ui  katyfindimpl.cpp  katyfindimpl.h  katyiface.h  katypref.cpp  katypref.h  katyprefappearance.cpp  katyprefappearance.h  katyprefappearance.ui  katyprefindenting.cpp  katyprefindenting.h  katyprefindenting.ui  katyreplace.cpp  katyreplace.h  katyreplace.ui  katyreplaceimpl.cpp  katyreplaceimpl.h  katyreplacing.cpp  katyreplacing.h  katyreplacing.ui  katyreplacingimpl.cpp  katyreplacingimpl.h  katytabstospaces.cpp  katytabstospaces.h  katytabstospaces.ui  katytabstospacesimpl.cpp  katytabstospacesimpl.h  katyui.rc  katyview.cpp  (+7 more)
katy/doc/: Makefile.in
katy/doc/en/: Makefile.am  Makefile.in  index.docbook
katy/menu/: Makefile.am  katy
katy/pics/: Makefile.am  Makefile.in
po/: .cvsignore  Makefile.am  Makefile.in
